[tool.poetry]
name = "ppo-warmup"
version = "0.1.0"
description = ""
authors = ["tobiadefami <tobiadefami@gmail.com>", "madisonmay <madison@indico.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ppo_warmup"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
